--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
    <script src="js/string.js"></script>
    <script src="js/array.js"></script>
+   <script src="js/function.js"></script>
 </body>
 
 </html>
