--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <script src="js/string.js"></script>
    <script src="js/array.js"></script>
    <script src="js/function.js"></script>
+   <script src="js/recursion.js"></script>
 </body>
 
 </html>
