--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <script src="js/array.js"></script>
    <script src="js/function.js"></script>
    <script src="js/recursion.js"></script>
+   <script src="js/condition.js"></script>
 </body>
 
 </html>
