--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
    <script src="js/function.js"></script>
    <script src="js/recursion.js"></script>
    <script src="js/condition.js"></script>
+   <script src="js/math.js"></script>
 </body>
 
 </html>
