--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <script src="js/recursion.js"></script>
    <script src="js/condition.js"></script>
    <script src="js/math.js"></script>
+   <script src="js/date.js"></script>
 </body>
 
 </html>
