--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+   <p>sdjvj kljvds nlndf njnbhde</p>
+
    <script src="js/string.js"></script>
    <script src="js/array.js"></script>
    <script src="js/function.js"></script>
