--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-   <p>sdjvj kljvds nlndf njnbhde</p>
+   <div></div>
+   <button>click me </button>
 
+
+   <!-- Script -->
    <script src="js/string.js"></script>
    <script src="js/array.js"></script>
    <script src="js/function.js"></script>
@@ -19,6 +22,8 @@
    <script src="js/condition.js"></script>
    <script src="js/math.js"></script>
    <script src="js/date.js"></script>
+   <script src="js/ajax.js"></script>
+   <script src="js/promise.js"></script>
 </body>
 
 </html>
