open all on one page AJAX

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 </head>
 
 <body>
-   <button>click me </button>
-   <div></div>
+   <div id="buttons">
+      <button id="ajax">AJAX</button>
+      <button id="ajax1">AJAX 1</button>
+      <button id="ajax2">AJAX 2</button>
+   </div>
+
+   <div class="main" id="main"></div>
+   <div>
+      <button id="load_image">Load Image</button>
+   </div>
+   <div class="main main_2" id="main_2"></div>
 
 
 
