--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
    <script src="js/training.js"></script>
    <script src="js/jsx.jsx"></script>
    <script src="js/codewars.js"></script>
+   <script src="js/calculator.js"></script>
 </body>
 
 </html>
