--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
    <script src="js/jsx.jsx"></script>
    <script src="js/codewars.js"></script>
    <script src="js/calculator.js"></script>
+   <script src="js/learnJS.js"></script>
 </body>
 
 </html>
