--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
    <script src="js/codewars.js"></script>
    <script src="js/calculator.js"></script>
    <script src="js/learnJS.js"></script>
+   <script src="js/kata.js"></script>
 </body>
 
 </html>
