Aston test analysis

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
    <script src="js/calculator.js"></script>
    <script src="js/learnJS.js"></script>
    <script src="js/kata.js"></script>
+   <script src="js/astonTest.js"></script>
 </body>
 
 </html>
