--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
    <!-- ////////////////// -->
    <!-- //1 -->
    <p>Document beginning</p>
+   <button id="testBtn">Click me</button>
 
    <!--  <script>
       document.addEventListener('DOMContentLoaded', () => alert("DOM is ready, executed independently from 'async'!"));
