--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+   <div class="wrapper">
    <!-- <div id="buttons">
       <button id="ajax">AJAX</button>
       <button id="ajax1">AJAX 1</button>
@@ -95,6 +96,7 @@
    </script> -->
 
    <!-- ///////////////// -->
+   </div>
 
 
 
