--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
    <script src="js/learnJS.js"></script>
    <script src="js/kata.js"></script>
    <script src="js/astonTest.js"></script>
+   <script src="js/this.js"></script>
 </body>
 
 </html>
