--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
    <script src="js/kata.js"></script>
    <script src="js/astonTest.js"></script>
    <script src="js/this.js"></script>
+   <script src="js/prototype.js"></script>
+   <script src="js/IT-Incubator.js"></script>
 </body>
 
 </html>
