--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
    <!-- ////////////////// -->
    <!-- //1 -->
-   <p>Document beginning</p>
-   <button id="testBtn">Click me</button>
+   <!-- <p>Document beginning</p>
+   <button id="testBtn">Click me</button> -->
 
    <!--  <script>
       document.addEventListener('DOMContentLoaded', () => alert("DOM is ready, executed independently from 'async'!"));
