Sprint 1 Lesson 1 is done

--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
    <script src="js/this.js"></script>
    <script src="js/prototype.js"></script>
    <script src="js/IT-Incubator.js"></script>
+   <script src="js/IT-Incubator-training.js"></script>
+   <script src="js/IT-Incubator-homework.js"></script>
 </body>
 
 </html>
