Sprint 4 lesson 9 is done

--- a/index.html
+++ b/index.html
@@ -98,6 +98,31 @@
    <!-- ///////////////// -->
    </div>
 
+   <!-- Sprint 4 lesson JS 1 -->
+
+   <div id="big" style="
+           border: 1px solid;
+           margin: 20px;
+           padding: 20px;
+           background-color: red;
+         ">
+      <div id="medium" style="
+             border: 1px solid;
+             margin: 20px;
+             padding: 20px;
+             background-color: greenyellow;
+           ">
+         <button id="buttonId">Click me</button>
+         <div id="small" style="
+               border: 1px solid;
+               margin: 20px;
+               padding: 20px;
+               background-color: pink;
+             "></div>
+      </div>
+   </div>
+   <a href="http://google.com" id="linkId">Google</a>
+
 
 
    <!-- Script -->
