--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="css/style.css">
+   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    <title>Document</title>
 </head>
 
@@ -149,7 +150,7 @@
    <script src="js/this.js"></script>
    <script src="js/prototype.js"></script>
    <script src="js/IT-Incubator.js"></script>
-   <script src="js/IT-Incubator-training.js"></script>
+   <script type="module" src="js/IT-Incubator-training.js"></script>
    <script src="js/IT-Incubator-homework.js"></script>
 </body>
 
