--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+   <div class="wrap">
+      <div class="popup"></div>
+   </div>
    <div class="wrapper">
    <!-- <div id="buttons">
       <button id="ajax">AJAX</button>
