--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="popup"></div>
    </div>
    <div class="wrapper">
+   
    <!-- <div id="buttons">
       <button id="ajax">AJAX</button>
       <button id="ajax1">AJAX 1</button>
@@ -100,8 +101,10 @@
    </script> -->
 
    <!-- ///////////////// -->
-   </div>
-
+   <!-- </div>
+   <div class="out">
+      <div class="pad"></div>
+   </div> -->
    <!-- Sprint 4 lesson JS 1 -->
 
    <div id="big" style="
